--- a/1-4-10.html
+++ b/1-4-10.html
@@ -15,12 +15,13 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
+  <link rel="stylesheet" href="3-style.css">
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
 
-  <h2 style="margin-top:45px;">ZEV Career - TV #10
+  <h2 style="margin-top:45px;"><a href="1.html" title="Career로 돌아가기"></a>ZEV Career</a> - <a href="1-4.html"title="TV로 돌아가기">TV</a> #10
   <br>그린 마더스 클럽(JTBC DRAMA) 2022 재웅 役</h2>
   <br><img src="Zev_4-10-1.jpeg" width="300">
   <br>[채널] JTBC
