--- a/1-1-19.html
+++ b/1-1-19.html
@@ -15,12 +15,13 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
+  <link rel="stylesheet" href="3-style.css">
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
 
-  <h2 style="margin-top:45px;">ZEV Career - Musical #19
+  <h2 style="margin-top:45px;"><a href="1.html" title="Career로 돌아가기">ZEV Career</a> - <a href="1-1.html"title="Musical로 돌아가기">Musical</a> #19
   <br>킹키 부츠 KINKY BOOTS 2019 롤라 役</h2>
   <br><img src="Zev_1-19-1.png" width="300">
   <img src="Zev_1-19-2.jpeg" width="300">
