--- a/1-1-20.html
+++ b/1-1-20.html
@@ -15,12 +15,13 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
+  <link rel="stylesheet" href="3-style.css">
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
 
-  <h2 style="margin-top:45px;">ZEV Career - Musical #20
+  <h2 style="margin-top:45px;"><a href="1.html" title="Career로 돌아가기">ZEV Career</a> - <a href="1-1.html"title="Musical로 돌아가기">Musical</a> #20
     <br>복사꽃, 생각하니 슬프다 2020 사도 役</h2>
     <br><img src="Zev_1-20-1.jpeg" width="300">
     <br>웹 뮤지컬 Web Musical
