--- a/1-1-23.html
+++ b/1-1-23.html
@@ -15,12 +15,13 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
+  <link rel="stylesheet" href="3-style.css">
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
 
-  <h2 style="margin-top:45px;">ZEV Career - Musical #23
+  <h2 style="margin-top:45px;"><a href="1.html" title="Career로 돌아가기">ZEV Career</a> - <a href="1-1.html"title="Musical로 돌아가기">Musical</a> #23
   <br>시카고 CHICAGO 2021 빌리 플린 役</h2>
   <br><img src="Zev_1-23-1.png" width="300">
   <img src="Zev_1-23-2.png" width="300">
