--- a/1-1-24.html
+++ b/1-1-24.html
@@ -15,12 +15,13 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
+  <link rel="stylesheet" href="3-style.css">
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
 
-  <h2 style="margin-top:45px;">ZEV Career - Musical #24
+  <h2 style="margin-top:45px;"><a href="1.html" title="Career로 돌아가기">ZEV Career</a> - <a href="1-1.html"title="Musical로 돌아가기">Musical</a> #24
   <br>하데스타운 HADESTOWN 2021 헤르메스 役</h2>
   <br><img src="Zev_1-24-1.png" width="300">
   <img src="Zev_1-24-2.png" width="300">
