--- a/1-1-26.html
+++ b/1-1-26.html
@@ -14,13 +14,14 @@
 
       gtag('config', 'G-VCNGH3SHSV');
     </script>
-  </p>
+  </p>  
+  <link rel="stylesheet" href="3-style.css">
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
 
-  <h2 style="margin-top:45px;">ZEV Career - Musical #26
+  <h2 style="margin-top:45px;"><a href="1.html" title="Career로 돌아가기">ZEV Career</a> - <a href="1-1.html"title="Musical로 돌아가기">Musical</a> #26
   <br>아이다 AIDA 2022 라다메스 役</h2>
   <br><img src="Zev_1-26-1.png" width="300">
   <img src="Zev_1-26-2.png" width="300">
