--- a/1-3-1.html
+++ b/1-3-1.html
@@ -14,13 +14,14 @@
 
       gtag('config', 'G-VCNGH3SHSV');
     </script>
-  </p>
+  </p>  
+  <link rel="stylesheet" href="3-style.css">
 </head>
 
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
 
-  <h2 style="margin-top:45px;">ZEV Career - Opera#20
+  <h2 style="margin-top:45px;"><a href="1.html" title="Career로 돌아가기">ZEV Career</a> - <a href="1-3.html"title="Opera로 돌아가기">Opera</a> #20
     <br>리타 RITA 2014-2016 가스파로 役</h2>
   <br><img src="Zev_3-1-1.jpeg" width="300">
 
