--- a/1-1-22.html
+++ b/1-1-22.html
@@ -21,30 +21,32 @@
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
 
-  <h2 style="margin-top:45px;"><a href="1.html" title="Career로 돌아가기">ZEV Career</a> - <a href="1-1.html"title="Musical로 돌아가기">Musical</a> #27
-  <br>킹키 부츠 KINKY BOOTS 2022 롤라 役</h2>
-  <br><img src="Zev_1-27-1.png" width="300">
-  <img src="Zev_1-27-2.png" width="300">
-  <br>[기간] 2022.07.20. ~ 2022.10.23.
-  <br>[장소] 충무아트센터 대극장
+  <h2 style="margin-top:45px;"><a href="1.html" title="Career로 돌아가기">ZEV Career</a> - <a href="1-1.html"title="Musical로 돌아가기">Musical</a> #23
+  <br>젠틀맨스 가이드 GENTLEMAN'S GUIDE_TO LOVE AND MURDER 2020 다이스퀴스 役</h2>
+  <br><img src="Zev_1-22-1.png" width="300">
+  <img src="Zev_1-22-2.png" width="300">
+  <br><img src="Zev_1-22-3.png" width="300">
+  <br>[기간] 2021.04.02. ~ 2021.07.18.
+  <br>[장소] 디큐브아트센터 외 18개 도시
+
   <p>
     <h3> Official Trailer </h3>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/DVbuqiTZS3k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/-EiM35eT_5Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/sSGjvrpHJv0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
   </p>
 
   <p>
     <h3> Profile </h3>
-    <img src="Zev_1-27-3.png" width="300">
-    <img src="Zev_1-27-4.png" width="300">
-    <img src="Zev_1-27-5.png" width="325">
-
+    <img src="Zev_1-23-4.jpeg" width="300">
   </p>
+
   <p>
     <h3> Official Videos </h3>
     <ul>
-      <li><a href="https://youtu.be/1bn5x_r9URc" target="_blank">[#킹키부츠] 최재림 'Not My Father's Son (Acoustic ver.)' Live 🎙️👠｜뮤지컬 킹키부츠 KINKY BOOTS</a></li>
-      <li><a href="https://youtu.be/QmdiuUsvMzQ" target="_blank">[#킹키부츠] 최재림 'What a Woman Wants' 잘 봐, 내가 보여줄게 여자들의 속마음 👠｜뮤지컬 킹키부츠 KINKY BOOTS</a></li>
-    </ul> 
+      <li><a href="https://youtu.be/47JwPnHPtyA" title="시츠프로브 '왜 가난하고 그래'" target="_blank">20 뮤지컬 젠틀맨스 가이드 시츠프로브 "왜 가난하고 그래"</a></li>
+      <li><a href="https://youtu.be/oPQJranzpKg" title="다이스퀴스 젠가퀴즈 미션" target="_blank">20 뮤지컬 젠틀맨스 가이드 다이스퀴스 젠가퀴즈 미션 (오만석,정상훈,이규형,최재림)</a></li>
+    </ul>
+
   </p>
 
   <p>
