--- a/1-4-3.html
+++ b/1-4-3.html
@@ -21,30 +21,13 @@
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
 
-  <h2 style="margin-top:45px;"><a href="1.html" title="Career로 돌아가기">ZEV Career</a> - <a href="1-1.html"title="Musical로 돌아가기">Musical</a> #27
-  <br>킹키 부츠 KINKY BOOTS 2022 롤라 役</h2>
-  <br><img src="Zev_1-27-1.png" width="300">
-  <img src="Zev_1-27-2.png" width="300">
-  <br>[기간] 2022.07.20. ~ 2022.10.23.
-  <br>[장소] 충무아트센터 대극장
-  <p>
-    <h3> Official Trailer </h3>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/DVbuqiTZS3k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </p>
+  <h2 style="margin-top:45px;"><a href="1.html" title="Career로 돌아가기">ZEV Career</a> - <a href="1-4.html"title="TV로 돌아가기">TV</a> #3
+  <br>세계문화기행 - 셰익스피어 편 (EBS) 2017</h2>
+  <p>예고편<iframe width="560" height="315" src="https://www.youtube.com/embed/Iuxpyx4MOSM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+  <br>세익스피어는 어디에 있는가? [EBS 세계 문학기행 4부] (EBS STORY)
+  <a href="https://worldtrip.ebs.co.kr/worldtrip/replayView?siteCd=KH&prodId=123381&courseId=10026594&stepId=10029662&lectId=10649448">전체 영상 바로가기</a>
 
-  <p>
-    <h3> Profile </h3>
-    <img src="Zev_1-27-3.png" width="300">
-    <img src="Zev_1-27-4.png" width="300">
-    <img src="Zev_1-27-5.png" width="325">
 
-  </p>
-  <p>
-    <h3> Official Videos </h3>
-    <ul>
-      <li><a href="https://youtu.be/1bn5x_r9URc" target="_blank">[#킹키부츠] 최재림 'Not My Father's Son (Acoustic ver.)' Live 🎙️👠｜뮤지컬 킹키부츠 KINKY BOOTS</a></li>
-      <li><a href="https://youtu.be/QmdiuUsvMzQ" target="_blank">[#킹키부츠] 최재림 'What a Woman Wants' 잘 봐, 내가 보여줄게 여자들의 속마음 👠｜뮤지컬 킹키부츠 KINKY BOOTS</a></li>
-    </ul> 
   </p>
 
   <p>
