--- a/1-6.html
+++ b/1-6.html
@@ -36,7 +36,7 @@
           <a href="1-3.html"><li>Opera</li></a>
           <a href="1-4.html"><li>TV</li></a>
           <a href="1-4.html"><li>Concert</li></a>
-          <a href="1-5.html" style="color:red"><li>Radio</li></a>
+          <a href="1-5.html" style="color:red"><li>Radio(Promotion)</li></a>
           <a href="1-7.html"><li>Youtube</li></a>
         </ul>
       </div>
@@ -52,9 +52,13 @@
           <li>커튼콜 (네이버 NOW.) 211110 - 하데스타운 팀</li>
           <li>아리랑 라디오 (아리랑국제방송)210326 - 시카고 팀</li>
           <li>웅산의 스윗 멜로디 (tbs FM) 210213</li>
+          <li>두시탈출 컬투쇼 (SBS 파워FM) 200924 - 킹키부츠 팀</li>
+          <li>최화정의 파워타임 (SBS 파워FM) 200703 - 렌트 팀 </li>
           <li>산들의 별이 빛나는 밤에 (MBC 표준FM) 200210 - 아이다 팀</li>
+          <li>최화정의 파워타임 (SBS 파워FM) 200204 - 아이다 팀 </li>
           <li>두시의데이트 뮤지, 안영미입니다 (MBC FM4U) 191029 - 아이다 팀</li>
-
+          <li>최화정의 파워타임 (SBS 파워FM) 180206 - 킹키부츠 팀 </li>
+          <li>최화정의 파워타임 (SBS 파워FM) 121101 - 어쌔신 팀 </li>
 
         </ul>
       </p>
