--- a/1-7.html
+++ b/1-7.html
@@ -35,19 +35,24 @@
           <a href="1-2.html"><li>Play</li></a>
           <a href="1-3.html"><li>Opera</li></a>
           <a href="1-4.html"><li>TV</li></a>
-          <a href="1-4.html"><li>Concert</li></a>
-          <a href="1-4.html"><li>Radio</li></a>
-          <a href="1-5.html" style="color:red"><li>Youtube</li></a>
+          <a href="1-5.html"><li>Concert</li></a>
+          <a href="1-6.html"><li>Radio(Promotion)</li></a>
+          <a href="1-7.html" style="color:red"><li>Youtube</li></a>
         </ul>
       </div>
 
     <div id="list">
       <p><h3>Youtube</h3>
         <ul>
-          <li>냉터뷰 (일일칠 - 117) 220407</li>
-          <li>정식의뢰 (모비딕 Mobidic) Ep.13</li>
+          <li><a href="https://youtu.be/rEV1DbF8zMg" target="_blank">냉터뷰 (일일칠 - 117) 220407</a></li>
+          <li><a href="https://youtu.be/_g0mbRjQZhQ" target="_blank">정식의뢰 (모비딕 Mobidic) Ep.13</a></li>
           <li><a href="1-1-20.html">복사꽃, 생각하니 슬프다 2020 (Web Musical) 사도 役</a></li>
-
+          <li><a href="https://youtu.be/-J75hBdn0mE" target="_blank">커튼콜 96회 (SBS 뉴스) 210616</a></li>
+          <li><a href="https://youtu.be/64i1fV8H5O4" target="_blank">커튼콜 95회 (SBS 뉴스) 210612</a></li>
+          <li><a href="https://youtu.be/XzMFmjGIDjg" target="_blank">[댓줌인터뷰] 뮤지컬 '시카고' 최재림(빌리 플린)ㆍ민경아(록시 하트) [통통컬처](TongTongCulture) 210427</a></li>
+          <li><a href="https://youtu.be/frRJQunjUvY" target="_blank">뮤지컬 아이다 공부방송 (혜화로운공연생활) 200130</a></li>
+          <li><a href="https://youtu.be/SHPIvAMVpA0" target="_blank">인터파크 랭킹쇼 65화 : 올해도 킹키하라! [킹키부츠] 최재림, 박강현 180202</a></li>
+          <li><a href="https://youtu.be/r-pMS1-Jkx4" target="_blank">[tbsTV]공연에 뜨겁게 미치다 - 정연주의 뜨거운 인터뷰 [에드거 엘런 포] 160609</a></li>
 
         </ul>
       </p>
