--- a/1-1.html
+++ b/1-1.html
@@ -36,7 +36,7 @@
         <a href="1-3.html"><li>Opera</li></a>
         <a href="1-4.html"><li>TV</li></a>
         <a href="1-5.html"><li>Concert</li></a>
-        <a href="1-6.html"><li>Radio</li></a>
+        <a href="1-6.html"><li>Radio(Promotion)</li></a>
         <a href="1-7.html"><li>Youtube</li></a>
       </ul>
     </div>
