--- a/1-2.html
+++ b/1-2.html
@@ -45,7 +45,7 @@
     <div id="list">
       <p><h3>Play</h3>
         <ul>
-          <li>타지마할의 근위병 GUARDS AT TAJ 2017 휴마윤 役</li>
+          <li><a href="1-2-03.html">타지마할의 근위병 GUARDS AT TAJ 2017 휴마윤 役</a></li>
           <li>안티고네 ANTIGONE 2016 경비병3 役</li>
           <li>유령 GHOSTS 2014 만데스 목사 役</li>
         </ul>
