--- a/1-7.html
+++ b/1-7.html
@@ -44,6 +44,7 @@
     <div id="list">
       <p><h3>Youtube</h3>
         <ul>
+          <li><a href="https://youtu.be/z6A9fAI0uxU">초성에 갇힌 #최재림 라다메스 | 뮤지컬 '아이다'는 #블루스퀘어 에서 | 4월호 (THEATREplus / 시어터플러스) 220513</a></li>
           <li><a href="https://youtu.be/rEV1DbF8zMg" target="_blank">냉터뷰 (일일칠 - 117) 220407</a></li>
           <li><a href="https://youtu.be/_g0mbRjQZhQ" target="_blank">정식의뢰 (모비딕 Mobidic) Ep.13</a></li>
           <li><a href="1-1-20.html">복사꽃, 생각하니 슬프다 2020 (Web Musical) 사도 役</a></li>
