--- a/1-1-01.html
+++ b/1-1-01.html
@@ -15,45 +15,39 @@
       gtag('config', 'G-VCNGH3SHSV');
     </script>
   </p>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-  
-  <script src="colors-1.js"> </script>
-
-  <link rel="stylesheet" href="1-style.css">
+  <link rel="stylesheet" href="3-style.css">
 </head>
 
 <body>
-  <input type="button" value="night" onclick="
-    nightDayHandler(this);
-  ">
-
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
-  <div id="grid">
-    <ol>
-      <a href="1.html" style="color:red;text-decoration:underline;"><li>Career</li></a>
-      <a href="2.html"><li>Awards</li></a>
-      <a href="3.html"><li>Contact</li></a>
-    </ol>
 
-    <div id="content">
-      <h2>Career</h2>
-      <u>since 2009.01.09</u>
-      <ul>
-        <li><a href="1-1.html">Musical</a></li>
-        <li><a href="1-2.html">Play</a></li>
-        <li><a href="1-3.html">Opera</a></li>
-        <li><a href="1-4.html">TV</a></li>
-        <li><a href="1-5.html">Concert</a></li>
-        <li><a href="1-6.html">Radio(Promotion)</a></li>
-        <li><a href="1-7.html">Youtube</a></li>
-
-      </ul>
-    </div>
-  </div>
-
+  <h2 style="margin-top:45px;"><a href="1.html" title="Career로 돌아가기">ZEV Career</a> - <a href="1-1.html"title="Musical로 돌아가기">Musical</a> #01
+  <br>렌트 RENT 2009 톰 콜린스 役</h2>
+  <br><img src="Zev_1-01-1.jpeg" width="300">
+  <img src="Zev_1-01-2.jpeg" width="300">
+  <img src="Zev_1-01-3.jpeg" width="300">
+  <br>[기간] 2016.05.26. ~ 2016.07.24.
+  <br>[장소] 광림아트센터 BBCH홀
+  <p>
+    <h3> Official Trailer </h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/bv4K42H_0JM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
 
   <p>
-    <div id="disqus_thread"></div>
+    <h3> Profile </h3>
+    <img src="Zev_1-12-4.png" width="300">
+  </p>
+  <p>
+    <h3> Official 박제 </h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/mc1UnZAYtKc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
+  <p>
+    <a href="https://youtu.be/MBaYVyn6cNg">[2009] 렌트 배우소개 영상 2 콜린, 앤젤, 모린, 조앤</a>
+  </p>
+
+  <p>
+    <div id="disqus_thread">
+    </div>
     <script>
         /**
         *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
@@ -89,6 +83,7 @@
     </script>
     <!--End of Tawk.to Script-->
   </p>
+
 
 </body>
 </html>
