--- a/1-1-20.html
+++ b/1-1-20.html
@@ -22,32 +22,59 @@
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
 
   <h2 style="margin-top:45px;"><a href="1.html" title="Career로 돌아가기">ZEV Career</a> - <a href="1-1.html"title="Musical로 돌아가기">Musical</a> #20
-    <br>복사꽃, 생각하니 슬프다 2020 사도 役</h2>
-    <br><img src="Zev_1-20-1.jpeg" width="300">
-    <br>웹 뮤지컬 Web Musical
-    <br>[채널]궁능TV
-
+  <br>킹키 부츠 KINKY BOOTS 2019 롤라 役</h2>
+  <br><img src="Zev_1-19-1.png" width="300">
+  <img src="Zev_1-19-2.jpeg" width="300">
+  <br>[기간] 2020.08.21. ~ 2020.11.01.
+  <br>[장소] 블루스퀘어 인터파크홀
   <p>
-    <h3>한글판</h3>
-    <br><a href="https://youtu.be/bjDs3Kvoj_U">[본편 / Ep1] 시간여행 그날, 정조 | 창경궁에서 태어난 아기 / 4K</a>
-    <br><a href="https://youtu.be/8f8DIDiHvlY">[본편 / Ep2] 시간여행 그날, 정조 | 사도Ⅰ / 4K</a>
-    <br><a href="https://youtu.be/oqEg6393BcQ">[본편 / Ep3] 시간여행 그날, 정조 | 사도Ⅱ / 4K</a>
-    <br><a href="https://youtu.be/kV4hqR4eu28">[본편 / Ep4] 시간여행 그날, 정조 | 진찬연 그리고 복사꽃의 밤 / 4K</a>
-  </p>
-  <p>
-    <h3>영문판</h3>
-    <br><a href="https://youtu.be/GAxk9Bpcs4Q">[ENG/Ep1] Time Travel: The Day – Story of King Jeongjo | A Baby born in Changgyeonggung Palace</a>
-    <br><a href="https://youtu.be/BDD2L5MmFAo">[ENG/Ep2] Time Travel: The Day – Story of King Jeongjo | Prince Sado Ⅰ</a>
-    <br><a href="https://youtu.be/WaCM6X8KUXI">[ENG/Ep3] Time Travel: The Day – Story of King Jeongjo | Prince Sado Ⅱ</a>
-    <br><a href="https://youtu.be/jTY27u6Pdmo">[ENG/Ep4] Time Travel: The Day –Story of King Jeongjo | Royal Banquet and the Night of Peach Blossom</a>
+    <h3> Official Trailer </h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/E5q2tVPGdjM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </p>
 
   <p>
     <h3> Profile </h3>
-    <img src="Zev_1-20-3.png" width="300">
-    <img src="Zev_1-20-4.png" width="300">
+    <img src="Zev_1-19-3.png" width="300">
+    <img src="Zev_1-19-4.png" width="300">
   </p>
 
+  <p>
+    <div id="disqus_thread"></div>
+    <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://all-about-zev.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  </p>
+
+  <p>
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/63161e2c37898912e96751d8/1gc76bo75';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
+  </p>
 
 
 </body>
