--- a/1-1-23.html
+++ b/1-1-23.html
@@ -22,10 +22,10 @@
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
 
   <h2 style="margin-top:45px;"><a href="1.html" title="Career로 돌아가기">ZEV Career</a> - <a href="1-1.html"title="Musical로 돌아가기">Musical</a> #23
-  <br>시카고 CHICAGO 2021 빌리 플린 役</h2>
-  <br><img src="Zev_1-23-1.png" width="300">
-  <img src="Zev_1-23-2.png" width="300">
-  <br><img src="Zev_1-23-3.png" width="300">
+  <br>젠틀맨스 가이드 GENTLEMAN'S GUIDE_TO LOVE AND MURDER 2020 다이스퀴스 役</h2>
+  <br><img src="Zev_1-22-1.png" width="300">
+  <img src="Zev_1-22-2.png" width="300">
+  <br><img src="Zev_1-22-3.png" width="300">
   <br>[기간] 2021.04.02. ~ 2021.07.18.
   <br>[장소] 디큐브아트센터 외 18개 도시
 
@@ -43,13 +43,8 @@
   <p>
     <h3> Official Videos </h3>
     <ul>
-      <li><a href="https://youtu.be/eHtB03xI1HA" title="📜뮤지컬 [아이다] 인터뷰" target="_blank">📜뮤지컬 [아이다] 인터뷰 WELCOME BACK, AIDA! 라다메스 #최재림</a></li>
-      <li><a href="https://youtu.be/XGOiUOlTI3Y" title="📜뮤지컬 [아이다] 50초 무반주 라이브" target="_blank">📜뮤지컬 [아이다] 50초 무반주 라이브 라다메스 #최재림 𝐄𝐋𝐀𝐁𝐎𝐑𝐀𝐓𝐄 𝐋𝐈𝐕𝐄𝐒</a></li>
-      <li><a href="https://youtu.be/YrE-rRv1MGU" title="🎤캐스트파티 LIVE🎤 FORTUNE FAVORS THE BRAVE" target="_blank">🎤캐스트파티 LIVE🎤 EVERY STORY IS A LOVE STORY - 민경아 & FORTUNE FAVORS THE BRAVE - 김우형,최재림</a></li>
-      <li><a href="https://youtu.be/WfqZmD53HLo" title="🎤캐스트파티 LIVE🎤 ELABORATE LIVES" target="_blank">🎤캐스트파티 LIVE🎤 ELABORATE LIVES - 전나영, 최재림</a></li>
-      <li><a href="https://youtu.be/PQ1EPFXiw5Y" title="🎤캐스트파티 LIVE🎤 A STEP TOO FAR" target="_blank">🎤캐스트파티 LIVE🎤 A STEP TOO FAR - 전나영, 김우형, 민경아 외 전배우</a></li>
-      <li><a href="https://youtu.be/St8zz8MoAr8" title="🎬연습실 공개 ver🎬 A STEP TOO FAR" target="_blank">🎬연습실 공개 ver🎬 A STEP TOO FAR</a></li>
-      <li><a href="https://youtu.be/_htQMOZivb4" title="🎥프레스콜 영상 공개🎥 Fortune Favors The Brave" target="_blank">🎥프레스콜 영상 공개🎥 Every Story Is A Love Story & Fortune Favors The Brave</a></li>
+      <li><a href="https://youtu.be/47JwPnHPtyA" title="시츠프로브 '왜 가난하고 그래'" target="_blank">20 뮤지컬 젠틀맨스 가이드 시츠프로브 "왜 가난하고 그래"</a></li>
+      <li><a href="https://youtu.be/oPQJranzpKg" title="다이스퀴스 젠가퀴즈 미션" target="_blank">20 뮤지컬 젠틀맨스 가이드 다이스퀴스 젠가퀴즈 미션 (오만석,정상훈,이규형,최재림)</a></li>
     </ul>
 
   </p>
