--- a/1-4-04.html
+++ b/1-4-04.html
@@ -21,22 +21,13 @@
 <body>
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
 
-  <h2 style="margin-top:45px;"><a href="1.html" title="Career로 돌아가기">ZEV Career</a> - <a href="1-1.html"title="Musical로 돌아가기">Musical</a> #26
-  <br>썸씽 로튼 SOMETHING ROTTEN 2022 셰익스피어 役</h2>
-  <br><img src="Zev_1-25-1.jpeg" width="300">
-  <img src="Zev_1-25-2.jpeg" width="300">
-  <br>[기간] 2021.12.23. ~ 2022.04.10.
-  <br>[장소] 유니버설아트센터
+  <h2 style="margin-top:45px;"><a href="1.html" title="Career로 돌아가기">ZEV Career</a> - <a href="1-4.html"title="TV로 돌아가기">TV</a> #04
+  <br>세계문화기행 - 셰익스피어 편 (EBS) 2017</h2>
+  <p>예고편<iframe width="560" height="315" src="https://www.youtube.com/embed/Iuxpyx4MOSM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+  <br>세익스피어는 어디에 있는가? [EBS 세계 문학기행 4부] (EBS STORY)
+  <a href="https://worldtrip.ebs.co.kr/worldtrip/replayView?siteCd=KH&prodId=123381&courseId=10026594&stepId=10029662&lectId=10649448">전체 영상 바로가기</a>
 
-  <p>
-    <h3> Official Trailer </h3>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/1f1X6TRmido" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </p>
 
-  <p>
-    <h3> Profile </h3>
-    <img src="Zev_1-25-3.jpeg" width="300">
-    <img src="Zev_1-25-4.jpeg" width="300">
   </p>
 
   <p>
