--- a/1-7.html
+++ b/1-7.html
@@ -47,10 +47,15 @@
           <li><a href="https://youtu.be/z6A9fAI0uxU">초성에 갇힌 #최재림 라다메스 | 뮤지컬 '아이다'는 #블루스퀘어 에서 | 4월호 (THEATREplus / 시어터플러스) 220513</a></li>
           <li><a href="https://youtu.be/rEV1DbF8zMg" target="_blank">냉터뷰 (일일칠 - 117) 220407</a></li>
           <li><a href="https://youtu.be/_g0mbRjQZhQ" target="_blank">정식의뢰 (모비딕 Mobidic) Ep.13</a></li>
-          <li><a href="1-1-20.html">복사꽃, 생각하니 슬프다 2020 (Web Musical) 사도 役</a></li>
           <li><a href="https://youtu.be/-J75hBdn0mE" target="_blank">커튼콜 96회 (SBS 뉴스) 210616</a></li>
           <li><a href="https://youtu.be/64i1fV8H5O4" target="_blank">커튼콜 95회 (SBS 뉴스) 210612</a></li>
+          <li><a href="https://youtu.be/8Qciy6wMaFs" target="_blank">[Catchy Korea] The Youngest Billy Flynn of Musical [Chicago]! Actor CHOI Jae-rim (Arirang Culture) 210607</a></li>
           <li><a href="https://youtu.be/XzMFmjGIDjg" target="_blank">[댓줌인터뷰] 뮤지컬 '시카고' 최재림(빌리 플린)ㆍ민경아(록시 하트) [통통컬처](TongTongCulture) 210427</a></li>
+          <li><a href="1-1-21.html">복사꽃, 생각하니 슬프다 2020 (Web Musical) 사도 役</a></li>
+          <li><a href="https://youtu.be/NzWCDsmy-yY" target="_blank">Brian McKnight - One Last Cry (cover by 최재림) (영또) 200813</a></li>
+          <li><a href="https://youtu.be/9lH3p0rdTis" target="_blank">🦒 188cm의 국보급 키와 성대를 가진 뮤지컬 왕자 최재림 (영또) 200811</a></li>
+          <li><a href="https://youtu.be/Kix2etZpfdg" target="_blank">가왕이 여기에 왜..? (Charming Jo 조매력) 200721</a></li>
+          <li><a href="https://youtu.be/QtFwn2bsp1Y" target="_blank">역대급 조인코래방 노래 모음집 뮤지컬배우 최재림님 황한나님 (Charming Jo 조매력) 200720</a></li>
           <li><a href="https://youtu.be/frRJQunjUvY" target="_blank">뮤지컬 아이다 공부방송 (혜화로운공연생활) 200130</a></li>
           <li><a href="https://youtu.be/SHPIvAMVpA0" target="_blank">인터파크 랭킹쇼 65화 : 올해도 킹키하라! [킹키부츠] 최재림, 박강현 180202</a></li>
           <li><a href="https://youtu.be/r-pMS1-Jkx4" target="_blank">[tbsTV]공연에 뜨겁게 미치다 - 정연주의 뜨거운 인터뷰 [에드거 엘런 포] 160609</a></li>
