--- a/1-1-27.html
+++ b/1-1-27.html
@@ -14,7 +14,7 @@
 
       gtag('config', 'G-VCNGH3SHSV');
     </script>
-  </p>
+  </p>  
   <link rel="stylesheet" href="3-style.css">
 </head>
 
@@ -22,29 +22,36 @@
   <a href="index.html"><h1>Choi Jae-Rim</h1></a>
 
   <h2 style="margin-top:45px;"><a href="1.html" title="Career로 돌아가기">ZEV Career</a> - <a href="1-1.html"title="Musical로 돌아가기">Musical</a> #27
-  <br>킹키 부츠 KINKY BOOTS 2022 롤라 役</h2>
-  <br><img src="Zev_1-27-1.png" width="300">
-  <img src="Zev_1-27-2.png" width="300">
-  <br>[기간] 2022.07.20. ~ 2022.10.23.
-  <br>[장소] 충무아트센터 대극장
+  <br>아이다 AIDA 2022 라다메스 役</h2>
+  <br><img src="Zev_1-26-1.png" width="300">
+  <img src="Zev_1-26-2.png" width="300">
+  <br><img src="Zev_1-26-3.png" width="300">
+  <br>[기간] 2022.05.10. ~ 2022.08.07.
+  <br>[장소] 블루스퀘어 신한카드
   <p>
     <h3> Official Trailer </h3>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/DVbuqiTZS3k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/4f4ydK47yxc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/tCY9l9KkLZQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/DiTkGPuenE4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </p>
 
   <p>
     <h3> Profile </h3>
-    <img src="Zev_1-27-3.png" width="300">
-    <img src="Zev_1-27-4.png" width="300">
-    <img src="Zev_1-27-5.png" width="325">
-
+    <img src="Zev_1-26-4.jpeg" width="300">
   </p>
+
   <p>
     <h3> Official Videos </h3>
     <ul>
-      <li><a href="https://youtu.be/1bn5x_r9URc" target="_blank">[#킹키부츠] 최재림 'Not My Father's Son (Acoustic ver.)' Live 🎙️👠｜뮤지컬 킹키부츠 KINKY BOOTS</a></li>
-      <li><a href="https://youtu.be/QmdiuUsvMzQ" target="_blank">[#킹키부츠] 최재림 'What a Woman Wants' 잘 봐, 내가 보여줄게 여자들의 속마음 👠｜뮤지컬 킹키부츠 KINKY BOOTS</a></li>
-    </ul> 
+      <li><a href="https://youtu.be/eHtB03xI1HA" title="📜뮤지컬 [아이다] 인터뷰" target="_blank">📜뮤지컬 [아이다] 인터뷰 WELCOME BACK, AIDA! 라다메스 #최재림</a></li>
+      <li><a href="https://youtu.be/XGOiUOlTI3Y" title="📜뮤지컬 [아이다] 50초 무반주 라이브" target="_blank">📜뮤지컬 [아이다] 50초 무반주 라이브 라다메스 #최재림 𝐄𝐋𝐀𝐁𝐎𝐑𝐀𝐓𝐄 𝐋𝐈𝐕𝐄𝐒</a></li>
+      <li><a href="https://youtu.be/YrE-rRv1MGU" title="🎤캐스트파티 LIVE🎤 FORTUNE FAVORS THE BRAVE" target="_blank">🎤캐스트파티 LIVE🎤 EVERY STORY IS A LOVE STORY - 민경아 & FORTUNE FAVORS THE BRAVE - 김우형,최재림</a></li>
+      <li><a href="https://youtu.be/WfqZmD53HLo" title="🎤캐스트파티 LIVE🎤 ELABORATE LIVES" target="_blank">🎤캐스트파티 LIVE🎤 ELABORATE LIVES - 전나영, 최재림</a></li>
+      <li><a href="https://youtu.be/PQ1EPFXiw5Y" title="🎤캐스트파티 LIVE🎤 A STEP TOO FAR" target="_blank">🎤캐스트파티 LIVE🎤 A STEP TOO FAR - 전나영, 김우형, 민경아 외 전배우</a></li>
+      <li><a href="https://youtu.be/St8zz8MoAr8" title="🎬연습실 공개 ver🎬 A STEP TOO FAR" target="_blank">🎬연습실 공개 ver🎬 A STEP TOO FAR</a></li>
+      <li><a href="https://youtu.be/_htQMOZivb4" title="🎥프레스콜 영상 공개🎥 Fortune Favors The Brave" target="_blank">🎥프레스콜 영상 공개🎥 Every Story Is A Love Story & Fortune Favors The Brave</a></li>
+    </ul>
+
   </p>
 
   <p>
